@@ -1,5 +1,10 @@
 2006-04-14  Adam Jackson  <ajax@freedesktop.org>
 
+	* hw/dmx/input/dmxconsole.c:
+	Coverity #1005: Avoid a null deref.
+
+2006-04-14  Adam Jackson  <ajax@freedesktop.org>
+
 	* hw/dmx/input/dmxinputinit.c:
 	Coverity #1007: Fix a silly null check.
 
